public/stylesheets/application.css
/* ... */
.text-editor-sidebar {
  position: absolute;
  width: 280px;
  right: 20px;
  top: 70px;
  max-height: 45px;
  overflow: hidden;
  transition: 1s;
}

.show-media-panel .text-editor-sidebar {
  max-height: 1200px;
  transition: 1s 0.5s;
}

.text-editor-sidebar-box  {
  background: #fcfcf9;
  border: 1px solid #d3d7cf;
  padding: 10px;
  margin-bottom: 10px;
}

.text-editor-sidebar .header {
  margin: 0 0 10px 0;
  padding: 10px;
  font-weight: bold;
  border: 1px solid #d3d7cf;
  background-color: #eeeeec;
  background-repeat: no-repeat;
  background-position: 98% 10px;
  position: relative;
}

.text-editor-sidebar .header .icon-vertical-toggle {
  position: absolute;
  right: 6px;
  top: 6px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.text-editor-sidebar code,
.text-editor-sidebar pre {
  border: 1px solid #d3d7cf;
  color: black;
  padding: 4px;
	background: white;
}
.text-editor-sidebar .icon-loading {
  background-image: url(../images/loading-small.gif);
}
.text-editor-sidebar .items {
  margin-bottom: 10px;
}

.text-editor-sidebar .image,
.view-all-media .image {
  display: inline-block;
  vertical-align: top;
  text-align: center;
  position: relative;
}

.text-editor-sidebar .image {
  width: 80px;
  margin: 2px;
  height: 80px;
  line-height: 80px;
}

.view-all-media .image {
  width: 150px;
  margin: 3px;
  height: 125px;
  line-height: 125px;
}

.view-all-images .image:hover {
  cursor: pointer;
  background-color: #EEE;
}

.text-editor-sidebar img,
.view-all-media img {
  vertical-align: middle;
  max-height: 100%;
  max-width: 100%;
}

.view-all-images {
  text-align: center;
}

.text-editor-sidebar .file,
.view-all-media .file {
  background-repeat: no-repeat;
  background-position: 0px 0px;
  border: none;
  margin-bottom: 12px;
  padding-left: 20px;
  overflow: hidden;
  text-align: left;
}

.text-editor-sidebar .file,
.view-all-media .file {
  white-space: nowrap;
  overflow: hidden;
}

.text-editor-sidebar select,
.text-editor-sidebar input {
  width: 100%;
  margin-bottom: 5px;
}

.text-editor-sidebar .items :hover,
.view-all-media :hover {
  background-color: transparent;
}

.text-editor-sidebar .items .image-controls,
.view-all-media .image-controls {
  display: none;
	position: absolute;
	top: 5px;
	left: 5px;
  line-height: 16px;
}

.text-editor-sidebar .items .item:hover .image-controls,
.view-all-media .item:hover .image-controls {
	display: block;
}

.view-all-images .item:hover .image-controls {
  display: none;
}

.text-editor-sidebar .items .file-controls,
.view-all-media .file-controls {
	margin-top: 5px;
}

.text-editor-sidebar .items .image-controls .icon-zoom,
.view-all-media .image-controls .icon-zoom  {
	background-image: url(../images/zoom-dark.png);
	display: block;
	width: 0px;
	margin-top: 4px;
}

.text-editor-sidebar .media-upload-error {
  color: red;
}
.text-editor-sidebar select {
  max-width: 355px;
}

.view-all-media {
  max-width: 830px;
  max-height: 600px;
}

.view-all-media a.button {
  background-color: #EEE;
}

#published-media .section-title {
  width: 100%;
  height: 40px;
}

#published-media .section-title h3 {
  float: left;
}

#published-media .section-title a.view-all {
  float: right;
  line-height: 40px
}

/* ==> public/stylesheets/controller_contact.css <== */
/*** SELECT CITY ***/

.controller-contact #content .select_state_for_origin, .controller-contact #content .select_city_for_origin {
  display: inline;
}
/* ==> public/stylesheets/controller_content_viewer.css <== */

/* ==> @import url('pagination.css'); <== */
.pagination {
  text-align: center;
  clear: both;
}
.pagination .disabled {
  color: #888;
}
.pagination .current {
  font-weight: bold;
}
.pagination a {
  text-decoration: none;
}
.pagination a:hover {
  color: #2e3436;
}

/* Folders */

.folder-content .folder-item img {
  vertical-align: middle;
  position: relative;
  left: -3px;
}

.image-gallery {
  text-align: center;
}
.image-gallery ul {
  padding: 0px;
  text-align: center;
  width: 486px;
  margin: auto;
}
.image-gallery-item {
  width: 142px;
  height: 170px;
  list-style: none;
  margin: 10px;
  float: left;
  overflow: hidden;
  background-repeat: no-repeat;
}
.image-gallery-item span {
  text-align: center;
  font-size: 11px;
}
.image-gallery-item span a {
  text-decoration: none;
  color: #000
}
.image-gallery-item img {
  padding: 2px;
}
.image-gallery-item a {
  width: 130px;
  height: 130px;
}
.image-gallery-item a {
  display: block;
  color: #DB8;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  margin: auto;
}
.image-gallery-item a span {
  display: none;
}
.image-gallery-item a:hover {
  background-color: #EEE;
}
.image-gallery-item .uploaded-file {
  background: transparent url('../images/icons-mime/empty.png') no-repeat 50% 43%;
}
#content #article .image-gallery .pagination .prev_page {
  position: relative;
  left: auto;
  right: auto;
}
#content #article .image-gallery .pagination .next_page {
  position: relative;
  right: auto;
  left: auto;
}
/************* enterprise homepage style *****************/

div.event-info {
  padding: 10px;
}
ul.event-data {
  margin: 0px;
  padding: 0px;
}
#content .event-data li {
  list-style: none;
  margin-bottom: 5px;
}
#content .event-data li span {
  font-weight: bold;
  padding-right: 0.25em;
}
li.event-dates span {
  display: none;
}
li.event-dates {
  padding: 5px;
  float: right;
  font-style: italic;
  padding-left: 32px;
  background: white url(../images/icons-mime/event.png) 5px 50% no-repeat;
}
div.event-info div.event-description {
  margin-top: 10px;
  padding: 5px;
  background: white;
}
div#article-parent {
  margin: 5px 0px;
  text-align: right;
  font-style: italic;
}
.article-body-uploaded-file {
  text-align: center;
}

/* ==> public/stylesheets/controller_events.css <== */
#agenda {
  position: relative;
  width: 100%;
}
#agenda .agenda-calendar {
  width: 50%;
  display: inline-block;
}
#agenda td, #agenda th {
  padding: 10px;
  padding-right: 0px;
}
/* ... */

